Made changes from code review

--- a/anirudh_chava_portfolio.html
+++ b/anirudh_chava_portfolio.html
@@ -10,49 +10,62 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <div class="col-md-4 col-sm-6 col-xs-4 logo-padding">
-                <img alt="My Logo" src="img/udacity_mark.png" height="85" width="90">
-            </div>
-            <div class="col-md-8 col-sm-6 col-xs-8 text-right text-uppercase">
-                <h1 class="name">Anirudh Chava</h1>
-                <h4 class="occupation">Front-End Ninja</h4>
-            </div>
-        </header>
-        <div class="col-md-12 col-sm-12 col-xs-12">
-            <hr>
-        </div>
-        <figure class="col-md-12 col-sm-12 col-xs-12">
-            <img alt="My awesome family picture" src="img/family.jpg">
-        </figure>
-        <section class="projects">
+        <div class="row">
             <header>
-                <div class="col-md-12 col-sm-12 col-xs-12">
-                    <h2 class="featured-work-title">Featured Work</h2>
+                <div class="col-md-4 col-sm-6 col-xs-6 logo-padding">
+                    <img alt="My Logo" src="img/udacity_mark.png">
                 </div>
-            </header>
-            <article class="col-md-4 col-sm-6 col-xs-12">
-                <figure>
-                    <img alt="Project1" src="img/me.jpg">
-                </figure>
-                <h3 class="featured-work-headers text-uppercase">Project 1</h3><a href="https://github.com">
-                <p class="featured-work-align">https://github.com</p></a>
-            </article>
-            <article class="col-md-4 col-sm-6 col-xs-12">
-                <figure>
-                    <img alt="Project2" src="img/me.jpg">
-                </figure>
-                <h3 class="featured-work-headers text-uppercase">Project 2</h3><a href="https://github.com">
-                <p class="featured-work-align">https://github.com</p></a>
-            </article>
-            <article class="col-md-4 col-sm-6 col-xs-12">
-                <figure>
-                    <img alt="Project4" src="img/me.jpg">
-                </figure>
-                <h3 class="featured-work-headers text-uppercase">Project 3</h3><a href="https://github.com">
-                <p class="featured-work-align">https://github.com</p></a>
-            </article>
-        </section>
+                <div class="col-md-8 col-sm-6 col-xs-6 text-right text-uppercase">
+                    <h1 class="name">Anirudh Chava</h1>
+                    <h4 class="occupation">Front-End Ninja</h4>
+                </div>
+            </header>ååå
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <hr>
+            </div>
+        </div>
+
+        <div class="row">
+            <figure class="col-md-12 col-sm-12 col-xs-12">
+                <img alt="My awesome family picture" src="img/family.jpg">
+            </figure>
+        </div>
+
+        <div class="row">
+            <section class="projects">
+                <header>
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <h2 class="featured-work-title">Featured Work</h2>
+                    </div>
+                </header>
+            </section>
+        </div>
+
+        <div class="row">
+            <main>
+                <article class="col-md-4 col-sm-6 col-xs-12">
+                    <figure>
+                        <img alt="Project1" src="img/me.jpg">
+                    </figure>
+                    <h3 class="featured-work-headers text-uppercase">Project 1</h3><a href="https://github.com">
+                    <p class="featured-work-align">https://github.com</p></a>
+                </article>
+                <article class="col-md-4 col-sm-6 col-xs-12">
+                    <figure>
+                        <img alt="Project2" src="img/me.jpg">
+                    </figure>
+                    <h3 class="featured-work-headers text-uppercase">Project 2</h3><a href="https://github.com">
+                    <p class="featured-work-align">https://github.com</p></a>
+                </article>
+                <article class="col-md-4 col-sm-6 col-xs-12">
+                    <figure>
+                        <img alt="Project4" src="img/me.jpg">
+                    </figure>
+                    <h3 class="featured-work-headers text-uppercase">Project 3</h3><a href="https://github.com">
+                    <p class="featured-work-align">https://github.com</p></a>
+                </article>
+            </main>
+        </div>
     </div>
 </body>
 </html>
